# aoc-2022

./: .gitignore  .rustfmt.toml  Cargo.toml  Cranky.toml  LICENSE  README.md  bacon.toml  rust-toolchain.toml
src/: lib.rs  main.rs  prelude.rs  testing.rs  utils.rs
