[package]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2022"
license = "MIT"
authors = ["Matt Heise <mhheise@pm.me>"]
categories = ["algorithms", "data-structures", "parsing"]
keywords = ["advent-of-code", "aoc"]
repository = "https://github.com/mhheise/aoc-2022"
edition = "2021"
default-run = "aoc"
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
indoc = "2"
itertools = "0.10"
parse-display = "0.8"
pathfinding = "4"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-case = "3"
